--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
  <img src="https://i.postimg.cc/rswJYBKH/1-7.jpg" alt="loumisoup.jpg" style="max-width: 100%; height: auto;">
 </div>
     
-<h2> <a href="https://lexlaw.gitbook.io/lexlaw/"> Comprehensive Guide to the Khula Procedure in Pakistan</a></h2>
+<h2> <a href="https://alex-payne1.gitlab.io/ambmenu/"> Sotanghon Guisado: A Hearty Filipino Stir-Fry Noodle Dish</a></h2>
 
 <h2>What is Lomi?</h2>
 <p>Lomi is a traditional Filipino noodle soup made with thick egg noodles and a rich broth. It is often filled with various ingredients such as chicken, pork, seafood, and vegetables. The dish is known for its comforting flavors and versatility, allowing cooks to customize it based on personal preferences or available ingredients. The "special" version of Lomi typically includes additional toppings like fish balls, shrimp, and vegetables, making it an even heartier meal.</p>
